--- a/2st/2/web/pay.xhtml
+++ b/2st/2/web/pay.xhtml
@@ -4,10 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:co="http://xmlns.jcp.org/jsf/composite/components"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-   <f:view>
-      <co:authorize userItem="#{UserController.user}"/>
-      <h:messages/>
-   </f:view>
+<f:view>
+    <h:outputLabel value="Hello, world"/>
+</f:view>
 </html>
