Homepage link added

--- a/2st/2/web/template.xhtml
+++ b/2st/2/web/template.xhtml
@@ -14,6 +14,9 @@
     <div id="header">
         <ui:insert name="header">
             <h2>Бабкосниматель</h2>
+            <h:link outcome="home">Домой</h:link>
+            <h:link style="padding-left: 15px" outcome="payed">У меня есть лишние бабки</h:link>
+            <hr/>
         </ui:insert>
     </div>
 
@@ -25,6 +28,7 @@
 
     <div id="footer">
         <ui:insert name="footer">
+            <hr/>
             <h6>BSTU Dmitry Plotnikov</h6>
         </ui:insert>
     </div>
