--- a/2st/2/web/pay.xhtml
+++ b/2st/2/web/pay.xhtml
@@ -12,13 +12,18 @@
         </h:outputLabel>
         <h:form rendered="#{not empty session.getAttribute('userId')}">
             <h:outputLabel value="Номер карты"/><br/>
-            <h:inputText value="#{CardController.card.num}"/><br/><br/>
+            <h:inputText name="Card number" title="Card number" value="#{CardController.card.num}">
+                <f:validateLength minimum="8" maximum="12"/>
+            </h:inputText><br/><br/>
             <h:outputLabel value="Срок действия"/><br/>
             <h:inputText value="#{CardController.card.until}">
+                <f:validator validatorId="CardDateValidator"/>
                 <f:convertDateTime pattern="MM/yy"/>
             </h:inputText><br/><br/>
             <h:outputLabel value="CVC"/><br/>
-            <h:inputText value="#{CardController.card.cvc}"/><br/><br/>
+            <h:inputText value="#{CardController.card.cvc}">
+                <f:validateLongRange minimum="0" maximum="999"/>
+            </h:inputText><br/><br/>
             <h:outputLabel value="Сумма"/><br/>
             <h:inputText value="#{CardController.card.sum}"/><br/><br/>
             <h:commandButton value="Снять бабки!" action="#{CardController.doPayment}"/>
